# evn_postprocess

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  __init__.py  actions.py  app.py  app_test.py  app_test2.py  comms.toml.example  evn-post-processing.md  main.py  metadata.py  mkdocs.yml  notes.md  pyproject.toml  requirements.txt  setup.inp  setup.py  zensical.toml
.github/workflows/: python-app.yml
assets/: computers.yaml  susci.yaml
doc/: classes.md
docs/: PRD-cleanup.md  PRD-refactor.md  audit-refactor.md  experiment.toml.example  index.md  issues-cleanup.md  issues-refactor.md
docs/api/: comms.md  dialog.md  distribution.md  eevn.md  experiment.md  experiment_state.md  feedback.md  inputs.md  io.md  lisfiles.md  mode.md  mstools.md  pipeline.md  pipelines.md  plotting.md  policy.md  process.md  reporting.md  retrieval.md  review.md  servers.md  source_classify.md  tools.md  utils.md  vex.md  workflow.md
docs/development/: architecture.md  changelog.md  contributing.md  pre-prd.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: backends.md  batch-mode.md  comms.md  dashboard.md  editing.md  eevn.md  modes.md  running.md  source-classification.md  tools.md  workflow.md
docs/reference/: cli.md  comms-config.md  env-vars.md  experiment-toml.md  policy.md  steps.md
docs/tasks/: cleanup-issue-01.md  issue-01.md
epp/: :  __init__.py  actions.py  metadata.py  process_eee.py
evn_postprocess/: __init__.py  dialog.py  environment.py  experiment.py  n21c3.expsum  process_ccs.py  process_css.py  process_eee.py  process_pipe.py  scheduler.py
src/: actions.py  dialog.py  metadata.py  process_ccs.py  process_eee.py  process_pipe.py
src/evn_postprocess/: comment_tasav.py  comms.py  dialog.py  eevn.py  experiment.py  experiment_state.py  feedback.py  inputs.py  io.py  lisfiles.py  main.py  mode.py  pipeline.py  plotting.py  policy.py  process.py  registry.py  reporting.py  review.py  servers.py  source_classify.py  tools.py  utils.py  vex.py  workflow.py
src/evn_postprocess/distribution/: __init__.py  jive.py
src/evn_postprocess/mstools/: __init__.py  main.py  misc.py  mounts.py  msdata.py  operations.py
src/evn_postprocess/pipelines/: __init__.py  aips.py
src/evn_postprocess/retrieval/: __init__.py  jive.py  local.py
src/evn_postprocess/scripts/: ampcal-db.py  ampcal.sh  ampcalstats.pl  append_antab_idi.py  check_antab_idi.py  comment_tasav_file.py  feedback.pl  find_idi_with_time.py  gscale2avg.py  idi2ms.py  polconvert.py  uvflg.pl  uvflgall.sh
src/evn_postprocess/templates/: feedback.html.template  pipeline.inp.txt.template  polconvert_inputs.toml.template  template-pbcor.tasav.txt  template.comment  template.tasav.txt
tests/: test_backends.py  test_batch_e2e.py  test_cli_mode.py  test_dialog_batch.py  test_distribution_jive.py  test_eevn.py  test_experiment_persistence.py  test_experiment_state.py  test_inputs.py  test_lisfile_consistency.py  test_mode.py  test_msops_toml.py  test_parallel_comparison.py  test_pipeline_antab_handling.py  test_pol_diagnostics.py  test_polconvert_selection.py  test_policy.py  test_regressions.py  test_reporting.py  test_retrieval.py  test_review.py  test_server_boundary.py  test_shell_echo.py  test_source_classify.py  test_tconvert_eee.py  test_tools.py  test_utils_format.py  test_workflow_batch.py
