[project]
name = "evn-postprocess"
version = "2.0.0a6"
description = "Suite to run internal processing of EVN observations"
readme = "README.md"
authors = [
    { name = "Benito Marcote", email = "marcote@jive.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "astropy",
    "blessed",
    "loguru",
    "multidict",
    "numpy",
    "ply",
    "python-casacore",
    "rich",
    "rich-argparse",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "zensical",
    "mkdocs-material",
    "mkdocstrings-python",
    "pymdown-extensions>=10.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[project.scripts]
postprocess = "evn_postprocess.main:main"
mstools = "evn_postprocess.mstools.main:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
