[project]
name = "evn-postprocess"
version = "3.0.0"
description = "Suite to run internal processing of EVN observations (from correlation to data distribution)"
readme = "README.md"
authors = [
    { name = "Benito Marcote", email = "marcote@jive.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "astropy",
    "blessed",
    "loguru",
    "multidict",
    "numpy",
    "ply",
    "python-casacore",
    "rich",
    "rich-argparse",
    "tomlkit",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
# RFC-catalogue lookup for heuristic source classification (source_classify.py);
# without it, classification degrades gracefully to scan statistics only.
catalogs = [
    "vlbiplanobs>=5.0",
]
docs = [
    "zensical",
    "mkdocs-material",
    "mkdocstrings-python",
    "pymdown-extensions>=10.21",
]
dev = [
    "mypy>=1.14",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Untyped/partially-stubbed third-party scientific-stack dependencies.
[[tool.mypy.overrides]]
module = [
    "casacore.*", "astropy.*", "loguru.*", "rich.*", "rich_argparse.*", "blessed.*",
    "jiveplot.*", "vlbiplanobs.*", "pymysql.*", "MySQLdb.*", "PolConvert.*", "casatasks.*",
    "ply.*", "pyrap.*", "natsort.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[project.scripts]
postprocess = "evn_postprocess.main:main"
mstools = "evn_postprocess.mstools.main:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
